--- a/ecsd/ewp.conf
+++ b/ecsd/ewp.conf
@@ -3,8 +3,20 @@
     [
         {'@type', 'tagged-value'},
         {'@tag', pa},
-        {'@title', <<"beam路径">>},
-        {'@desc', <<"这里的path将优先被搜索。">>},
+        {'@title', <<"追加到头部的beam路径">>},
+        {'@desc', <<"add path to the front of Erlang's code path">>},
+        {'@value', [{'@type', 'simple-list'},
+                    {'@element-type', string},
+                    {'@title', <<"路径">>}]}
+    ],
+
+
+    %% pz
+    [
+        {'@type', 'tagged-value'},
+        {'@tag', pz},
+        {'@title', <<"追加到尾部的beam路径">>},
+        {'@desc', <<"add path to the end of Erlang's code path">>},
         {'@value', [{'@type', 'simple-list'},
                     {'@element-type', string},
                     {'@title', <<"路径">>}]}
@@ -53,7 +65,8 @@
         {'@title', <<"环境">>},
         {'@value', [{'@type', atom},
                     {'@alternative-value', development},
-                    {'@alternative-value', production}
+                    {'@alternative-value', production},
+                    {'@alternative-value', test}
                     ]}
     ],
 
@@ -63,10 +76,89 @@
         {'@type', 'tagged-value'},
         {'@tag', xml2term_style},
         {'@title', <<"xml转成term方式">>},
+        {'@desc', <<"从EWP5.1开始引入了<b>distinct</b>方式，此种方式下的输出将更加严格，无歧义。默认为legacy方式。">>},
         {'@value', [{'@type', atom},
                     {'@alternative-value', legacy},
                     {'@alternative-value', distinct}
                     ]}
+    ],
+
+
+    %% res_convertor
+    [
+        {'@type', 'tagged-value'},
+        {'@tag', res_convertor},
+        {'@title', <<"procedure的输出转换器">>},
+        {'@desc', <<"<b>none</b>： 不做任何转换，默认方式。<b>xml2term</b>：从xml结构转换到term结构。<b>xml2json</b>：从xml结构转换到json结构。<b>{Module, Function}</b>：自定义转换方式。">>},
+        
+        {'@value', [{'@type', atom},
+                    {'@alternative-value', none},
+                    {'@alternative-value', xml2term},
+                    {'@alternative-value', xml2json},
+                    {'@alternative-value', '{Mod, Func}'}
+                    ]}
+    ],
+
+    %% include
+    [
+        {'@type', 'tagged-value'},
+        {'@tag', include},
+        {'@title', <<"引用配置文件">>},
+        {'@value', [{'@type', string}]}
+    ],
+
+    %% db_node_type
+    [
+        {'@type', 'tagged-value'},
+        {'@tag', db_node_type},
+        {'@title', <<"数据节点类型">>},
+        {'@value', [{'@type', atom},
+                    {'@alternative-value', master},
+                    {'@alternative-value', slave}
+                    ]}
+    ],
+
+
+    %% apps
+    [
+        {'@type', 'tagged-value'},
+        {'@tag', apps},
+        {'@title', <<"加载时需要启动的app">>},
+        {'@value', [{'@type', list},
+                    {'@title', <<"app列表">>},
+                    {'@value', [{'@type', atom},
+                                {'@title', <<"指定app名称(使用默认路径)">>}]},
+                    {'@value', [{'@type', tuple},
+                                {'@title', <<"指定app名称及路径">>},
+                                {'@value', [{'@type', atom},
+                                            {'@title', <<"app名称">>}]},
+                                {'@value', [{'@type', string},
+                                            {'@title', <<"app路径">>}]}]}]}
+    ],
+
+
+
+    %% mnesia
+    [
+        {'@type', 'tagged-value'},
+        {'@tag', mnesia},
+        {'@title', <<"mnesia配置">>},
+        {'@value', [{'@type', list},
+                    {'@title', <<"配置选项">>},
+                    {'@value', [{'@type', 'tagged-value'},
+                                {'@tag', mnesia_dir},
+                                {'@title', <<"数据路径">>},
+                                {'@value', [{'@type', string}]}]}
+                    ]}
+    ],
+
+
+    %% session_timeout
+    [
+        {'@type', 'tagged-value'},
+        {'@tag', session_timeout},
+        {'@title', <<"会话超时时间">>},
+        {'@value', [{'@type', integer}]}
     ],
 
 
@@ -123,18 +215,39 @@
     [
         {'@type', 'tagged-value'},
         {'@tag', mem_threshold},
-        {'@title', <<"Memory threadshold">>},
+        {'@title', <<"内存阀值">>},
+        {'@desc', <<"当可用内存低于阀值时，<b>system_busy</b>标志将被设置。当会话数量高于阀值时，<b>session_full</b>标志将被设置。">>},
         {'@value', [{'@type', tuple},
                     {'@value', [{'@type', boolean},
-                                 {'@title', <<"unknown">>}]},
+                                 {'@title', <<"是否生效">>}]},
                     {'@value', [{'@type', integer},
-                                 {'@title', <<"整数1">>}]},
+                                 {'@title', <<"检查频率">>}]},
                     {'@value', [{'@type', integer},
-                                 {'@title', <<"整数2">>}]},
+                                 {'@title', <<"最低可用内存大小">>}]},
                     {'@value', [{'@type', integer},
-                                 {'@title', <<"整数3">>}]}
+                                 {'@title', <<"最多会话数量">>}]}
                    ]
         }
+    ],
+
+
+    %% session_cleanup
+    [
+        {'@type', 'tagged-value'},
+        {'@tag', session_cleanup},
+        {'@title', <<"是否清除session">>},
+        {'@value', [{'@type', boolean}]}
+    ],
+
+
+    %% language
+    [
+        {'@type', 'tagged-value'},
+        {'@tag', language},
+        {'@title', <<"gettext语言设置">>},
+        {'@value', [{'@type', atom},
+                    {'@alternative-value', chinese}
+                    ]}
     ],
 
 
@@ -188,5 +301,143 @@
                     }
                    ]
         }
+    ],
+
+
+    %% server
+    [
+        {'@type', 'tagged-value'},
+        {'@tag', server},
+        {'@title', <<"系统服务">>},
+        {'@value', [{'@type', list},
+                    {'@title', <<"服务启停设置">>},
+                    {'@value', [{'@type', 'tagged-value'},
+                                {'@tag', ewp_syslog_server},
+                                {'@title', <<"syslog服务">>},
+                                {'@value', [{'@type', boolean}]}]},
+                    {'@value', [{'@type', 'tagged-value'},
+                                {'@tag', ewp_offline_server},
+                                {'@title', <<"离线服务">>},
+                                {'@value', [{'@type', boolean}]}]},
+                    {'@value', [{'@type', 'tagged-value'},
+                                {'@tag', cpu_usage},
+                                {'@title', <<"cpu使用率诊断服务">>},
+                                {'@value', [{'@type', boolean}]}]},
+                    {'@value', [{'@type', 'tagged-value'},
+                                {'@tag', temp_file_cleaner},
+                                {'@title', <<"临时文件清除服务">>},
+                                {'@value', [{'@type', boolean}]}]},
+                    {'@value', [{'@type', 'tagged-value'},
+                                {'@tag', sec_connection},
+                                {'@title', <<"加密服务">>},
+                                {'@value', [{'@type', boolean}]}]},
+                    {'@value', [{'@type', 'tagged-value'},
+                                {'@tag', cron_service},
+                                {'@title', <<"计划任务服务">>},
+                                {'@value', [{'@type', boolean}]}]},
+                    {'@value', [{'@type', 'tagged-value'},
+                                {'@tag', template_monitor},
+                                {'@title', <<"模板修改监控服务">>},
+                                {'@value', [{'@type', boolean}]}]},
+                    {'@value', [{'@type', 'tagged-value'},
+                                {'@tag', ewp_websocket},
+                                {'@title', <<"websocket服务">>},
+                                {'@value', [{'@type', boolean}]}]}
+                    ]}
+    ],
+
+
+    [
+        {'@type', 'tagged-value'},
+        {'@tag', event},
+        {'@title', <<"事件管理器">>},
+        {'@value', [{'@type', 'simple-list'},
+                    {'@title', <<"配置">>},
+                    {'@element-type', tuple},
+                    {'@element-value', [{'@type', atom},
+                                        {'@title', <<"事件管理器">>}]},
+                    {'@element-value', [{'@type', list},
+                                        {'@title', <<"事件管理器配置">>},
+                                        {'@value', [{'@type', 'tuple'},
+                                                    {'@title', <<"添加/删除">>},
+                                                    {'@value', [{'@type', atom},
+                                                                {'@title', <<"动作">>},
+                                                                {'@desc', <<"可为add, delete之一。">>}
+                                                                ]},
+                                                    {'@value', [{'@type', atom},
+                                                                {'@title', <<"事件处理器">>}
+                                                                ]},
+                                                    {'@value', [{'@type', boolean},
+                                                                {'@title', <<"是否启用">>}
+                                                                ]}]},
+                                        {'@value', [{'@type', 'tuple'},
+                                                    {'@title', <<"交换">>},
+                                                    {'@value', [{'@type', atom},
+                                                                {'@title', <<"动作">>},
+                                                                {'@desc', <<"只能为swap">>}
+                                                                ]},
+                                                    {'@value', [{'@type', tuple},
+                                                                {'@title', <<"替换时间处理器">>},
+                                                                {'@value', [{'@type', atom},
+                                                                            {'@title', <<"待换出的事件处理器">>}]},
+                                                                {'@value', [{'@type', atom},
+                                                                            {'@title', <<"将换入的事件处理器">>}]}
+                                                                ]},
+                                                    {'@value', [{'@type', boolean},
+                                                                {'@title', <<"是否启用">>}
+                                                                ]}]}
+                    ]}]
+        }
+    ],
+
+
+    %% offline
+    [
+        {'@type', 'tagged-value'},
+        {'@tag', offline},
+        {'@title', <<"离线资源服务配置">>},
+        {'@value', [{'@type', list},
+                    {'@title', <<"配置">>},
+                    {'@value', [{'@type', 'tagged-value'},
+                                {'@tag', tcp_port},
+                                {'@title', <<"tcp下载端口号">>},
+                                {'@value', [{'@type', integer}]}]},
+                    {'@value', [{'@type', 'tagged-value'},
+                                {'@tag', max_connections},
+                                {'@title', <<"最大连接数">>},
+                                {'@value', [{'@type', integer}]}]}
+                    ]}
+    ],
+
+
+    %% ewp_addon
+    [
+        {'@type', 'tagged-value'},
+        {'@tag', ewp_addon},
+        {'@title', <<"附加组件配置">>},
+        {'@value', [{'@type', list},
+                    {'@title', <<"组件">>},
+                    {'@value', [{'@type', 'tagged-value'},
+                                {'@tag', admin},
+                                {'@title', <<"管理后台">>},
+                                {'@value', [{'@type', list},
+                                            {'@title', <<"配置">>},
+                                            {'@value', [{'@type', 'tagged-value'},
+                                                        {'@tag', addon_root},
+                                                        {'@title', <<"路径">>},
+                                                        {'@value', [{'@type', string}]}]}]}]}]}
+    ],
+
+
+    %% lua_compile
+    [
+        {'@type', 'tagged-value'},
+        {'@tag', lua_compile},
+        {'@title', <<"使用luajit编译离线资源的平台">>},
+        {'@desc', <<"平台可以为：iphone, android, wp, qt, common">>},
+        {'@value', [{'@type', 'simple-list'},
+                    {'@element-type', string},
+                    {'@title', <<"平台">>}]}
     ]
+
 ].
