Add ecsds for validating channel/security confs.

--- a/ecsd/ewp.conf
+++ b/ecsd/ewp.conf
@@ -435,9 +435,14 @@
         {'@tag', lua_compile},
         {'@title', <<"使用luajit编译离线资源的平台">>},
         {'@desc', <<"平台可以为：iphone, android, wp, qt, common">>},
-        {'@value', [{'@type', 'simple-list'},
-                    {'@element-type', string},
-                    {'@title', <<"平台">>}]}
+        {'@value', [{'@type', list},
+                    {'@value', [{'@type', string},
+                                {'@title', <<"平台">>},
+                                {'@alternative-value', "iphone"},
+                                {'@alternative-value', "android"},
+                                {'@alternative-value', "wp"},
+                                {'@alternative-value', "qt"},
+                                {'@alternative-value', "common"}]}]}
     ]
 
 ].
